# poly_data

./: .gitignore  .pre-commit-config.yaml  Example 1: Trader Analysis.ipynb  Explore and Backtest.ipynb  README.md  USAGE_GUIDE.md  filter.py  migrate_csv_to_parquet.py  parallel_sync.py  pyproject.toml  update.py  update_all.py
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-25-poly-data-v2.md  2026-04-27-nb04-bench-and-nb05-ml-baseline.md
examples/: 01-trader-analysis.ipynb  02-backtest.ipynb  03-orderfilled-analysis.ipynb  04-benchmark-polars-vs-duckdb.ipynb  05-ml-dataset-and-baseline.ipynb  isolated.ipynb
poly_utils/: utils.py
scripts/: build_nb04.py  build_nb05.py  make_smoke_fixture.py  migrate_csv_to_parquet.py  migrate_orderfilled_xz.py  smoke_nb04.py  smoke_nb05.py
signals/: alert.py  config.json  detect.py  scan.py  state.json
src/poly_data/: __init__.py  cli.py  logging_setup.py
tests/: conftest.py  test_cli.py  test_compact.py  test_cursor.py  test_distribute_huggingface.py  test_goldsky_ingest.py  test_logging_setup.py  test_markets_ingest.py  test_migrate.py  test_parallel.py  test_parquet_store.py  test_platform.py  test_process_live.py  test_trades_process.py  test_update_chain.py  test_update_markets.py  test_utils.py
tests/analysis/: conftest.py  test_bench.py  test_dataloader.py  test_io.py  test_ml_dataset.py  test_positions.py  test_ranking.py  test_scale_compute_player_stats.py
tests/ingest/: test_markets_category.py
update_utils/: pipeline.py  process_live.py  process_live_lazy.py  update_chain.py  update_goldsky.py  update_markets.py
(+23 files in other folders)
