[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poly-data"
version = "0.1.0"
description = "Polymarket data pipeline for fetching, processing, and analyzing trading data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.0.0",
    "polars>=0.20.0",
    "requests>=2.31.0",
    "gql[requests]>=3.5.0",
    "flatten-json>=0.1.13",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

