[project]
name = "poly-data"
version = "0.2.0"
description = "Polymarket data pipeline (Parquet lake, cross-platform)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Warproxxx", email = "" }]

dependencies = [
    "polars>=0.20,<2.0",
    "pyarrow>=15",
    "requests>=2.31",
    "gql[requests]>=3.4",
    "flatten-json>=0.1.13",
    "huggingface-hub>=0.20",
    "rich>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3.12",
    "responses>=0.25",
    "ruff>=0.4",
    "nbstripout>=0.7",
    "jupyter>=1.0",
    "ipykernel>=6.25",
]
analysis = [
    "duckdb>=1.0",
]

[project.scripts]
poly-data = "poly_data.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/poly_data"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"
